# ozlistings-chat

./: .gitignore  Dockerfile  README.md  cloudbuild-frontend.yaml  cloudbuild.yaml  database.py  docker-compose.backend.yml  docker-compose.local.yml  docker-compose.yml  main.py  migrate_schema.py  oz_bbb_guide.py  profiling.py  pyproject.toml  rag.py  requirements.txt  test_comprehensive_db.py
backend/: .env  .gitignore  Dockerfile  database.py  main.py  profiling.py  rag.py  requirements.txt
docs/: PROJECT_DOCUMENTATION.md  README.md  SCHEMA_DOCUMENTATION.md
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: EnhancedChat.js
tests/: check_auth_users.py  test_examples.py  test_new_system.py  test_profile_extraction.py
